# xpcs-eigen

./: CMakeLists.txt
src/io/: py_config.cpp
src/xpcs/: benchmark.h  configuration.cpp  configuration.h  corr.cpp  corr.h  eigen.cpp  funcs.cpp  funcs.h  h5_result.cpp  h5_result.h  imm.h
src/xpcs/data_structure/: sparse_data.cpp
src/xpcs/filter/: average.cpp  average.h  dense_average.cpp  dense_average.h  dense_filter.cpp  dense_filter.h  sparse_filter.cpp  sparse_filter.h  stride.cpp  stride.h
src/xpcs/io/: ufxc_reader.cpp  ufxc_reader.h
